[package]
name = "plotters-offscreen-canvas"
version = "0.1.0"
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"

[dependencies.plotters-backend]
version = "0.3.5"
git = "https://github.com/plotters-rs/plotters"

[dependencies.web-sys]
version = "0.3.64"
features = ['OffscreenCanvas', 'OffscreenCanvasRenderingContext2d']

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[dependencies.plotters]
version = "0.3.5"
default_features = false
git = "https://github.com/plotters-rs/plotters"
